# morays-doc

./: .gitignore  README.md  morays_container.def  pyOASIS_NEMO.md  pyproject.toml
docs/: morays.yml  pyOASIS_NEMO.md
docs/source/: conf.py  contribute.rst  croco.api.rst  croco.getting_started.rst  croco.perf.rst  croco.rst  croco.tools.rst  croco.tuto.rst  getting_started.rst  index.rst  license.rst  morays_exp.rst  nemo.api.rst  nemo.api_4.rst  nemo.api_5.rst  nemo.eophis.rst  nemo.getting_started.rst  nemo.perf.rst  nemo.rst  nemo.tools.rst  nemo.tuto.rst  nemo.tuto_l22.rst  overview.rst
inferences/: linreg_weights.ckpt  main.py  models.py
nemo_patch/: README.md
nemo_patch/NEMO_v4.0.4/OCE/: cpl_oasis3.F90  inffld.F90  infmod.F90  nemogcm.F90  sbc_oce.F90  sbccpl.F90  sbcmod.F90
nemo_patch/NEMO_v4.0.4/SAS/: nemogcm.F90
nemo_patch/NEMO_v4.0.7/OCE/: infmod.F90  sbc_oce.F90  sbccpl.F90  sbcmod.F90  step_oce.F90
nemo_patch/NEMO_v4.0.7/SAO/: nemogcm.F90
nemo_patch/NEMO_v4.0.7/SAS/: nemogcm.F90  step.F90
nemo_patch/NEMO_v4.2.0/OCE/: sbccpl.F90  sbcmod.F90
nemo_patch/NEMO_v4.2.0/SAS/: nemogcm.F90
nemo_src/: README.md
nemo_src/OCE/: cpl_oasis3.F90  inffld.F90  infmod.F90  step_oce.F90  stpmlf.F90
nemo_src/SAS/: nemogcm.F90
python_cpl/: namcouple_torc_torc  pyOASIS_NEMO.md  pyoasis.yml  pyproject.toml
python_cpl/src/: morays.py  namcouple_base  pycpl.py
python_cpl/src/moray/: moray.py
python_cpl/src/smart_morays/: freqs.py  inferences.py  loop.py  moray.py  morays.py  pycpl.py
python_src/: namcouple_torc_torc  pycpl.py
(+6 files in other folders)
