[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "moray"
version = "0.0.0"
description = "NEMO-Machine Learning tools coupling"
authors = [
  { name="Alexis Barge", email="alexis.barge@proton.me" },
]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10.4"

dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/alexis-barge/smart-moray"
"Bug Tracker" = "https://github.com/alexis-barge/smart-moray/issues"

[tool.setuptools]
package-dir = {}
